--- a/ram.html
+++ b/ram.html
@@ -20,10 +20,21 @@
 
         <div class="mb-3">
           <label for="email">Email</label>
-          <input type="text" class="form-control" id="email" />
+          <input type="email" class="form-control" id="email" />
           <p id="emailErrMsg" class="error-message"></p>
         </div>
-        
+        <div class="mb-3">
+            <label for="password">password</label>
+            <input type="password" class="form-control" id="password" />
+          </div>
+          <div class="mb-3">
+            <label for="Date">Date of birth</label>
+            <input type="date" class="form-control" id="date" />
+          </div>
+          <div class="mb-1 d-flex flex-row justify-content-start">
+            <input type="checkbox" class="form-control" id="date" />
+            <label for="checkbox">Accepted terms</label>
+          </div>
         <button type="submit" class="btn btn-primary"> Submit </button>
       </form>
 
