--- a/ram.html
+++ b/ram.html
@@ -9,7 +9,7 @@
 </head>
  <body>
     <div class="container">
-      <h1 class="form-heading">Add User</h1>
+      <h1 class="form-heading">Registration form</h1>
 
       <form id="myForm">
         <div class="mb-3">
