--- a/ram.html
+++ b/ram.html
@@ -30,6 +30,7 @@
           <div class="mb-3">
             <label for="Date">Date of birth</label>
             <input type="date" class="form-control" id="date" />
+            <p id="dateer" class="error-message"></p>
           </div>
           <div class="mb-1 d-flex flex-row justify-content-start">
             <input type="checkbox" class="form-control" id="date" />
